kubernetes/3_influxdb.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: metrics
  labels:
    app: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      namespace: metrics
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb:latest
        ports:
        - name: httpport
          containerPort: 8086
        volumeMounts:
        - name: data-vol
          mountPath: /var/lib/influxdb
        - name: config-vol
          mountPath: /etc/influxdb
      volumes:
      - name: data-vol
        emptyDir: {}
      - name: config-vol
        configMap:
          name: influxdb-configmap
          items:
          - key: influxdb.conf
            path: influxdb.conf

---
apiVersion: v1
kind: Service
metadata:
  namespace: metrics
  name: influxdb
  labels:
    app: influxdb
spec:
  type: ClusterIP
  selector:
    app: influxdb
  ports:
  - port: 8086
    protocol: TCP
