kubernetes/5_chronograf.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chronograf
  namespace: metrics
  labels:
    app: chronograf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chronograf
  template:
    metadata:
      namespace: metrics
      labels:
        app: chronograf
    spec:
      containers:
      - name: chronograf
        image: chronograf:latest
        ports:
        - name: httpport
          containerPort: 8888
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  namespace: metrics
  name: chronograf
  labels:
    app: chronograf
spec:
  type: ClusterIP
  selector:
    app: chronograf
  ports:
  - port: 8888
    protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: metrics
  name: chronograf
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: chronograf
          servicePort: 8888
